2005-09-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: 
	(List): do not save iterator in instance, save the iterators
	in a local table.
	
	* kiwi/ui/widgets/list.py:
	(List.count, List.index, List.extend): Add
	(List.insert, List.pop, List.reverse, List.sort): Add stubs
	(List.append, List.remove, List.update): Rename
	(List.add_instance, List.remove_instance, List.update_instance)
	(List.select_instance): Add backwards compat wrappers
	(List._load): Clean up, add iterator support.
	(List.select): Check selection mode

	* kiwi/utils.py (deprecated): New decorator

	* kiwi/ui/widgets/list.py:
	Remove a couple of methods, now when we have the iter in the instance.
	
2005-09-27  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/widgets/list.py (List.get_previous, List.get_next): New
	methods.
	(List.add_instance, List._load): Set instance.iter upon insertion.
	(Column.__init__): Raise ValueError if iter is used, it's reserved
	(List.select): Rename from select_instance, use iter from
	instance, scroll to cell.	

2005-09-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/accessors.py (CacheControl.invalidate): Use DefaultValue instead of
	AttributeError. Fixes bug #695: Do not eat AttributeError's triggered
	in kgetattr accessors.

2005-09-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combobox.py (ComboBox.__init__): Only emit changed
	once.

2005-09-20  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py: Add support for objects mapped
	to strings for entry completion. Also add a property, exact-completion
	which decides if it should be case insensitive and match substrings.
	Fixes bug #2150

	* tests/test_List.py: Make it pass again

	* kiwi/ui/widgets/list.py (List.get_columns): Return the columns here 
	instead of the column definition string.
	(List.do_get_property): Access the column string directly here.

2005-09-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py: