@@ -1,3 +1,11 @@
+2005-09-30  Johan Dahlin  <jdahlin@async.com.br>
+
+	* tests/test_argcheck.py (ArgTest.testUserDefined): Add some basic
+	tests.
+
+	* kiwi/argcheck.py: Move in decorator from fiscalprinter.
+	Add some additional tests and support for checking default values.
+
 2005-09-28  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/widgets/list.py: 
